--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pathdoras-box",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "A tool to extract all paths related to .js files under a specific root",
   "main": "pathtool.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "search"
   ],
   "author": "gkchris",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/GkChris/gkchris-pathdoras-box/issues"
   },
